# HTNBackendChallenge

./: .gitignore  Dockerfile  README.md  application.py  docker-compose.yml  populate_db.py  pyproject.toml  requirements.txt  server.py
api/: __init__.py
api/controllers/: __init__.py  skillsController.py  userController.py
api/models/: __init__.py  skillModel.py  userModel.py
api/routes/: __init__.py  v1.py
api/util/: __init__.py  helpers.py
