[tool.poetry]
name = "htn-backend-challenge"
version = "1.0.0"
description = ""
authors = ["Kelvin Zhang <me@kelvinzhang.ca>"]

[tool.taskipy.tasks]
start = "python server.py"
init_db = "python populate_db.py"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-restx = "^0.2.0"
shortuuid = "^1.0.1"
flask_sqlalchemy = "^2.4.4"

[tool.poetry.dev-dependencies]
taskipy = "^1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"